--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="/script/js01.js"></script>
-    <script src="/script/js02.js"></script>
-    <script src="/script/js03.js"></script>
+   <!-- <script src="/script/functionjs01.js"></script> --> 
+    <script src="/script/сycle_js02.js"></script>
 </body>
 </html>
