--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
    <!-- <script src="/script/functionjs01.js"></script> --> 
-    <script src="/script/сycle_js02.js"></script>
+    <script src="./script/сycle_js02.js"></script>
 </body>
 </html>
